# TestTask

./: .gitignore  CMakeLists.txt  README.md  gitattributes
files/: file.xml  prime.xml  test.xml  test_write.xml
src/: main.cpp
src/cpp/: XMLParser.cpp  XMLWriter.cpp  string_methods.cpp
src/headers/: Interval.h  XML.h  XMLParser.h  XMLWriter.h  string_methods.h
test/src/: runtest.cpp
test/src/cpp/: TestStringMethods.cpp  TestXMLParser.cpp  TestXMLWriter.cpp
test/src/headers/: TestStringMethods.h  TestXMLParser.h  TestXMLWriter.h
